src/components/Footer/Footer.css
.footer {
    background-color: #7980FF;
    height: 77px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 430px;
    box-sizing: border-box;
    position: fixed;
    bottom: 0;
    left: 0;
}

.footer p {
    color: white;
    margin: 0;
    display: flex;
    align-items: center;
}

.footer .copyright {
    margin-right: 0.5rem;
    font-weight: bold;
}

